gccida/c0/forget_old_reloads_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/reload1.c:4578:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/reload1.c:4578:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/reload1.c:4580:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/reload1.c:4580:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/reload1.c:4626:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/reload1.c:4627:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/forget_old_reloads_1/src/obj/reload1.o] Error 1
